--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,7 +26,7 @@
     </header>
     <section class="hero"></section>
     <main>
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="main-section">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Laptop, magnifying glass, cup of coffee, cup of pens, and a notebook with SEO terms on the page sit on a table top"/>
             <h2>Search Engine Optimization</h2>
             <p>
