--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="Develop\assets\css\style.css">
     <title>Horiseon Home Page</title>
 </head>
 
@@ -27,21 +27,21 @@
     <section class="hero"></section>
     <main>
         <section id="search-engine-optimization" class="main-section">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Laptop, magnifying glass, cup of coffee, cup of pens, and a notebook with SEO terms on the page sit on a table top"/>
+            <img src="Develop\assets\images\search-engine-optimization.jpg" class="float-left" alt="Laptop, magnifying glass, cup of coffee, cup of pens, and a notebook with SEO terms on the page sit on a table top"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="main-section">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person looks at their mobile phone and an open laptop with the word 'reputation' and some graphs on the screen"/>
+            <img src="Develop\assets\images\online-reputation-management.jpg" class="float-right" alt="A person looks at their mobile phone and an open laptop with the word 'reputation' and some graphs on the screen"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="main-section">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="People sit around a table with social media related graphics placed on top of it"/>
+            <img src="Develop\assets\images\social-media-marketing.jpg" class="float-left" alt="People sit around a table with social media related graphics placed on top of it"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <aside class="benefits">
         <section class="benefit-section">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Drawing of a gear pushing money through a funnel"/>
+            <img src="Develop\assets\images\lead-generation.png" alt="Drawing of a gear pushing money through a funnel"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-section">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Drawing of a business person with a lightbulb for a head"/>
+            <img src="Develop\assets\images\brand-awareness.png" alt="Drawing of a business person with a lightbulb for a head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-section">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Drawing of gears and coins"></img>
+            <img src="Develop\assets\images\cost-management.png" alt="Drawing of gears and coins"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
